--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
+# Notes and temporary files
 notes.md
+
+# Model files and weights
+models/
+*.safetensors
+*.bin
+*.pt
+*.pth
+
+# Python cache files
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# Environment files
+.env
+.venv
+env/
+venv/
+
+# Data files (optional - uncomment if you don't want to track data)
+# data_save/
