--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ env.yml
 # Data files (optional - uncomment if you don't want to track data)
 # data_save/
 data/LLM_CACHE/
+
+# Other
+linear_probe.ipynb
